--- a/Quan ly bong da/Quan ly bong da.csproj
+++ b/Quan ly bong da/Quan ly bong da.csproj
@@ -80,6 +80,12 @@
     </Compile>
     <Compile Include="Connect.cs" />
     <Compile Include="DataGrid.cs" />
+    <Compile Include="DoiMK.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DoiMK.Designer.cs">
+      <DependentUpon>DoiMK.cs</DependentUpon>
+    </Compile>
     <Compile Include="fLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CapnhatKQ.resx">
       <DependentUpon>CapnhatKQ.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DoiMK.resx">
+      <DependentUpon>DoiMK.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fLogin.resx">
       <DependentUpon>fLogin.cs</DependentUpon>
